Dara: Fix meta overflow issue

--- a/dara/blocks.css
+++ b/dara/blocks.css
@@ -32,6 +32,12 @@ Description: Used to style Gutenberg Blocks.
 2.0 Blocks - Common Blocks
 --------------------------------------------------------------*/
 
+/* Posts */
+
+.wp-block-newspack-blocks-homepage-articles .entry-meta {
+	position: initial;
+}
+
 /* Paragraph */
 
 p.has-drop-cap:not(:focus)::first-letter {
