--- a/dara/style.css
+++ b/dara/style.css
@@ -2449,6 +2449,7 @@ video {
 	}
 	.entry-meta {
 		line-height: 2;
+		position: absolute;
 		left: 55px;
 		text-align: right;
 		width: 121px;
